# futilang

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sampl
examples/: classes.sl  libs.sampl  opengl.sampl
examples/engine/: libs.sampl  main.sampl  main.sapl  require.sampl  require.sapl  require_impl.sampl  require_impl.sapl  shader.sampl  shader.sapl
examples/nested_includes/: main.sl  myfunc.sl  wrap.sl
glad/include/glad/: gl.h
src/: main.cpp
