cmake_minimum_required(VERSION 3.17)
set(CMAKE_C_STANDARD 99)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_EXTENSIONS OFF)
project(sampl VERSION 0 LANGUAGES C CXX)
find_package(glfw3 REQUIRED)
add_executable(sampl src/main.cpp glad/src/gl.c)
include_directories(glad/include)
target_link_libraries(sampl glfw)
